<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="android.example.notabene.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:hint="@string/recognizedText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="32sp"
            android:inputType="textMultiLine"/>
    </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/btnMic"
                style="@style/ButtonFont"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:layout_gravity="center_vertical"
                app:iconGravity="textStart"
                android:text="@string/mic"
                app:icon="@drawable/ic_baseline_mic_24" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/btnSend"
                style="@style/ButtonFont"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:layout_gravity="center_vertical"
                app:iconGravity="textStart"
                android:text="@string/send"
                app:icon="@android:drawable/ic_menu_send" />

        </LinearLayout>

</LinearLayout>